# pyneurobik

./: .gitignore  AGENTS.md  NEUROBIK.md  NEUROBIK_PROTOTYPE.md  README.md  dev.nix  flake.nix  pyproject.toml  pytest.ini  sample_config.yaml
neurobik/: cli.py  config.py  downloader.py  tui.py  utils.py
tests/: test_cli.py  test_config.py  test_downloader.py  test_tui.py  test_utils.py
